# nix-diff

./: .gitmodules  README.md  dump-config.nix  expression.nix  flake.nix  main.c  main.cc  meson.build
src/: diff.cc
